# Agamemnon

./: .clang-format  .clang-tidy  .claude-followup-156.md  .claude-prompt-157.md  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  conanfile.py  docker-compose.yml  justfile  pixi.toml  pyproject.toml  renovate.json
agamemnon/: .gitignore  __init__.py  pixi.toml  pyproject.toml
agamemnon/orchestration/: __init__.py  __main__.py  config.py  daemon.py  models.py  nats_listener.py
agamemnon/src/agamemnon/: __init__.py
agamemnon/src/agamemnon/orchestration/: __init__.py  config.py  daemon.py  dag_walker.py  logging.py  models.py  nats_listener.py  task_claimer.py  validation.py
agamemnon/tests/: test_importability.py  test_log_level_validation.py  test_orchestration_imports.py
clients/python/: README.md  pixi.toml  pyproject.toml
clients/python/.pixi/envs/default/conda-meta/: _openmp_mutex-4.5-20_gnu.json  bzip2-1.0.8-hda65f42_9.json  ca-certificates-2026.4.22-hbd8a1cb_0.json  ld_impl_linux-64-2.45.1-default_hbd61a6d_102.json  libexpat-2.8.0-hecca717_0.json  libffi-3.5.2-h3435931_0.json  libgcc-15.2.0-he0feb66_19.json  libgomp-15.2.0-he0feb66_19.json  liblzma-5.8.3-hb03c661_0.json  libmpdec-4.0.0-hb03c661_1.json  libsqlite-3.53.1-h0c1763c_0.json  libuuid-2.42-h5347b49_0.json  libzlib-1.3.2-h25fd6f3_2.json  ncurses-6.6-hdb14827_0.json  openssl-3.6.2-h35e630c_0.json  pixi  pixi_env_prefix  python-3.14.4-habeac84_100_cp314.json  python_abi-3.14-8_cp314.json  readline-8.3-h853b02a_0.json  tk-8.6.13-noxft_h366c992_103.json  tzdata-2025c-hc9c84f9_1.json  zstd-1.5.7-hb78ec9c_6.json
clients/python/.pixi/envs/default/lib/: libtinfo.so.6.6  libtinfow.so.6.6  libuuid.so.1.3.0  tclConfig.sh  tkConfig.sh
clients/python/.pixi/envs/default/lib/itcl4.2.3/: itclConfig.sh
clients/python/.pixi/envs/default/lib/pkgconfig/: form.pc  formw.pc  history.pc  libcrypto.pc  libffi.pc  libssl.pc  libzstd.pc  menu.pc  menuw.pc  ncurses++.pc  ncurses++w.pc  ncurses.pc  ncursesw.pc  openssl.pc  panel.pc  panelw.pc  python-3.14-embed.pc  python-3.14.pc  readline.pc  sqlite3.pc  tcl.pc  tinfo.pc  tinfow.pc  tk.pc  uuid.pc
clients/python/.pixi/envs/default/lib/python3.14/: _sysconfig_vars__linux_x86_64-linux-gnu.json  _sysconfigdata__linux_x86_64-linux-gnu.py  _sysconfigdata__linux_x86_64-linux-gnu.py.orig  _sysconfigdata_x86_64_conda_linux_gnu.py  build-details.json
clients/python/.pixi/envs/default/lib/python3.14/config-3.14-x86_64-linux-gnu/: Makefile  config.c  python-config.py
clients/python/.pixi/envs/default/lib/tdbc1.1.5/: tdbcConfig.sh
clients/python/.pixi/envs/default/share/terminfo/61/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
clients/python/.pixi/envs/default/share/terminfo/63/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
clients/python/.pixi/envs/default/share/terminfo/64/: ddr  dec-vt220
clients/python/.pixi/envs/default/share/terminfo/65/: emu-220
clients/python/.pixi/envs/default/share/terminfo/67/: go140  go140w  go225
clients/python/.pixi/envs/default/share/terminfo/68/: hazel  hp2392  hp2641a  hp300h  hp700-wy  hp9845  hp98550  hpex  hpsub
clients/python/.pixi/envs/default/share/terminfo/69/: ims-ansi
clients/python/.pixi/envs/default/share/terminfo/6b/: kt7
clients/python/.pixi/envs/default/share/terminfo/6d/: mai  mt4520-rv
clients/python/.pixi/envs/default/share/terminfo/6e/: ncsa  ncsa-m  ncsa-m-ns  ncsa-ns  ncsa-vt220  netbsd6  news-29  news-29-euc  news-29-sjis  news-33  news-33-euc  news-33-sjis  news-42  news-42-euc  news-42-sjis  news-old-unk  news-unk  news28  news29  nwp512  nwp512-a  nwp513  nwp513-a  nwp517  nwp517-w
clients/python/.pixi/envs/default/share/terminfo/6f/: opus3n1+  otek4115
clients/python/.pixi/envs/default/share/terminfo/70/: pcmw  pcvt25  pcvt25-color  pcvt25w  (+11 more)
clients/python/src/agamemnon/: __init__.py
clients/python/src/agamemnon/orchestration/: __init__.py  config.py  daemon.py  dag_walker.py  logging.py  models.py  nats_listener.py  task_claimer.py
clients/python/src/agamemnon_client/: __init__.py  client.py  config.py  models.py
clients/python/tests/: test_agents_md_consistency.py  test_bump_version.py  test_ci_workflows.py  test_client.py  test_config.py  test_models.py
clients/python/tests/orchestration/: conftest.py  helpers.py  test_dag_walker.py  test_graceful_shutdown.py  test_logging.py  test_nats_listener.py  test_task_claimer.py  test_task_event.py  test_validation.py  test_version_bounds.py
test/: CMakeLists.txt
test/src/: route_test_fixture.hpp  test_agent_envelope.cpp  test_auth.cpp  test_circuit_breaker.cpp  test_dead_letter_queue.cpp  test_github_client.cpp  test_github_webhook.cpp  test_healthcheck.cpp  test_hmas_types.cpp  test_main.cpp  test_metrics.cpp  test_nats_client.cpp  test_orchestrator.cpp  test_orchestrator_persistence.cpp  test_pagination.cpp  test_parse_port.cpp  test_peer_discovery.cpp  test_planning_breakdown.cpp  test_rate_limiter.cpp  test_routes.cpp  test_routes_auth.cpp  test_routes_limits.cpp  test_routes_malformed.cpp  test_routes_no_internal_leak.cpp  test_server_limits.cpp  test_shutdown.cpp  test_state_machine.cpp  test_store.cpp  test_store_concurrent.cpp  test_store_edge_cases.cpp  test_store_hydration.cpp  test_store_persistence.cpp  test_store_writethrough.cpp  test_validation.cpp  test_version.cpp
test/src/agents/: test_agent_concepts.cpp  test_agent_core.cpp  test_basic_delegation.cpp  test_component_coordination.cpp  test_failure_injector.cpp  test_logger.cpp  test_message_factory.cpp  test_metrics.cpp  test_module_coordination.cpp  test_pull_or_steal.cpp  test_task_execution_strategy.cpp  test_work_stealing_queue.cpp  test_work_stealing_scheduler.cpp
test/src/integration/: server_fixture.hpp  test_agent_endpoints.cpp  test_chaos_endpoints.cpp  test_peer_discovery_integration.cpp  test_task_lifecycle.cpp
(+322 files in other folders)
