[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HomericIntelligence-Agamemnon-Orchestration"
version = "0.1.0"
description = "Python orchestration layer for ProjectAgamemnon"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["src/agamemnon"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = ["src"]
packages = ["agamemnon"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
