[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HomericIntelligence-Agamemnon-Orchestration"
version = "0.1.0"
description = "Python orchestration layer for ProjectAgamemnon (migrated from ProjectKeystone)"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0,<3",
    "nats-py>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0,<2",
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0,<7",
    "pytest-timeout>=2.3,<3",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agamemnon"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.9"
mypy_path = "src"
packages = ["agamemnon"]

[[tool.mypy.overrides]]
module = ["nats.*", "nats.js.*", "nats.errors.*", "nats.js.errors.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["agamemnon"]
omit = ["src/agamemnon/orchestration/__main__.py"]

[tool.coverage.report]
# Threshold reflects current orchestration coverage with only import smoke tests
# in place (see #127). Raise as runtime/integration tests are added for
# daemon.py, dag_walker.py, nats_listener.py, task_claimer.py.
fail_under = 25
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "class .*\\(Protocol\\):",
    "\\.\\.\\.\\s*$",
]
