[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HomericIntelligence-Agamemnon"
version = "0.1.0"
description = "Async Python client for the Agamemnon REST API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "eval_type_backport>=0.2; python_version < '3.10'",
    "nats-py>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<0.26",
    "pytest-cov>=5.0,<6",
    "pytest-timeout>=2.3,<3",
    "respx>=0.21,<1",
    "mypy>=1.10,<2",
    "ruff>=0.4,<1",
    "pyyaml>=6.0,<7",
]

[project.urls]
Repository = "https://github.com/HomericIntelligence/ProjectAgamemnon"

[tool.hatch.build.targets.wheel]
packages = ["src/agamemnon_client"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.9"
packages = ["agamemnon_client"]

[[tool.mypy.overrides]]
module = [
    "nats.*",
    "respx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
]
pythonpath = ["src", "tests"]
# Default per-test timeout (seconds). Orchestration tests may override via
# @pytest.mark.timeout(...). Requires pytest-timeout (see dev deps).
timeout = 60
timeout_method = "thread"

[tool.coverage.run]
# Coverage scope is intentionally limited to the published package(s).
# `scripts/bump-version.py` is excluded — it is a developer release helper
# (exercised only by `just release`) and tests for it live separately as
# `tests/test_bump_version.py`. If `bump-version.py` is ever moved into the
# shipped package, add it to `source` so coverage drift becomes visible. See #104.
source = ["agamemnon_client"]

[tool.coverage.report]
fail_under = 96
