[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HomericIntelligence-Agamemnon"
version = "0.1.0"
description = "Async Python client for the Agamemnon REST API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "eval_type_backport>=0.2; python_version < '3.10'",
    "nats-py>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<0.26",
    "pytest-cov>=5.0,<6",
    "pytest-timeout>=2.3,<3",
    "respx>=0.21,<1",
    "mypy>=1.10,<2",
    "ruff>=0.4,<1",
    "pyyaml>=6.0,<7",
]

[project.urls]
Repository = "https://github.com/HomericIntelligence/Agamemnon"

# uv dependency groups (ADR-018: uv replaces pixi).
#
# `dev` mirrors the former pixi `dev` feature and adds the sibling
# orchestration package (installed from source via [tool.uv.sources] below) so
# the tests under tests/orchestration/ exercise the real implementation.
# `lint` mirrors the former pixi `lint` feature: pip-audit (`just audit` /
# security dependency-scan) plus the msgpack security floor.
[dependency-groups]
dev = [
    "HomericIntelligence-Agamemnon-Orchestration",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<0.26",
    "pytest-cov>=5.0,<6",
    "pytest-timeout>=2.3,<3",
    "respx>=0.21,<1",
    "mypy>=1.10,<2",
    "ruff>=0.4,<1",
    "pyyaml>=6.0,<7",
]
lint = [
    # pip-audit and its transitive msgpack floor only publish wheels for
    # Python >=3.10; the audit runs on modern CI runners, so the group is
    # marked accordingly. The client library itself still supports 3.9 — only
    # this dev/audit tooling group is gated. (Under pixi this was a separate
    # `lint` solve-group; uv shares the project's requires-python, hence the
    # explicit markers.)
    "pip-audit>=2.8; python_version >= '3.10'",
    "pip>=26.1.2; python_version >= '3.10'",
    # Transitive dep of pip-audit (via cachecontrol). Pinned to the first
    # patched release for GHSA-6v7p-g79w-8964 (use-after-free DoS, CVSS 7.5);
    # msgpack <= 1.2.0 is flagged by security/dependency-scan and blocks all
    # open PRs.
    "msgpack>=1.2.1; python_version >= '3.10'",
]

[tool.uv.sources]
# Canonical orchestration package pulled in from the repo (audit finding S1):
# client orchestration tests exercise the real implementation, not a vendored
# copy. Matches the former pixi `path = "../../agamemnon", editable = true`.
"HomericIntelligence-Agamemnon-Orchestration" = { path = "../../agamemnon", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/agamemnon_client"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.9"
packages = ["agamemnon_client"]

[[tool.mypy.overrides]]
module = [
    "nats.*",
    "respx.*",
]
ignore_missing_imports = true

# Do not type-check the internals of third-party async runtime libraries.
# Under uv (ADR-018) the resolver selects a current anyio whose source uses
# `match` statements; with our `python_version = "3.9"` target mypy would flag
# that 3.10 syntax inside the installed package. anyio is pulled in only
# transitively (httpx / respx) and its own type-correctness is not our concern,
# so skip following imports into it. (pixi's older pinned anyio hid this.)
[[tool.mypy.overrides]]
module = ["anyio.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
]
pythonpath = ["src", "tests"]
# Default per-test timeout (seconds). Orchestration tests may override via
# @pytest.mark.timeout(...). Requires pytest-timeout (see dev deps).
timeout = 60
timeout_method = "thread"

[tool.coverage.run]
# Coverage scope is intentionally limited to the published package(s).
# `scripts/bump-version.py` is excluded — it is a developer release helper
# (exercised only by `just release`) and tests for it live separately as
# `tests/test_bump_version.py`. If `bump-version.py` is ever moved into the
# shipped package, add it to `source` so coverage drift becomes visible. See #104.
source = ["agamemnon_client"]

[tool.coverage.report]
fail_under = 96
